; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/decnet/extr_dn_fib.c_dn_fib_dnaddr_event.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/decnet/extr_dn_fib.c_dn_fib_dnaddr_event.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.notifier_block = type { i32 }
%struct.dn_ifaddr = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32, i32* }

@NOTIFY_DONE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.notifier_block*, i64, i8*)* @dn_fib_dnaddr_event to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dn_fib_dnaddr_event(%struct.notifier_block* %0, i64 %1, i8* %2) #0 {
  %4 = alloca %struct.notifier_block*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.dn_ifaddr*, align 8
  store %struct.notifier_block* %0, %struct.notifier_block** %4, align 8
  store i64 %1, i64* %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load i8*, i8** %6, align 8
  %9 = bitcast i8* %8 to %struct.dn_ifaddr*
  store %struct.dn_ifaddr* %9, %struct.dn_ifaddr** %7, align 8
  %10 = load i64, i64* %5, align 8
  switch i64 %10, label %45 [
    i64 128, label %11
    i64 129, label %21
  ]

11:                                               ; preds = %3
  %12 = load %struct.dn_ifaddr*, %struct.dn_ifaddr** %7, align 8
  %13 = call i32 @dn_fib_add_ifaddr(%struct.dn_ifaddr* %12)
  %14 = load %struct.dn_ifaddr*, %struct.dn_ifaddr** %7, align 8
  %15 = getelementptr inbounds %struct.dn_ifaddr, %struct.dn_ifaddr* %14, i32 0, i32 0
  %16 = load %struct.TYPE_2__*, %struct.TYPE_2__** %15, align 8
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 8
  %19 = call i32 @dn_fib_sync_up(i32 %18)
  %20 = call i32 @dn_rt_cache_flush(i32 -1)
  br label %45

21:                                               ; preds = %3
  %22 = load %struct.dn_ifaddr*, %struct.dn_ifaddr** %7, align 8
  %23 = call i32 @dn_fib_del_ifaddr(%struct.dn_ifaddr* %22)
  %24 = load %struct.dn_ifaddr*, %struct.dn_ifaddr** %7, align 8
  %25 = getelementptr inbounds %struct.dn_ifaddr, %struct.dn_ifaddr* %24, i32 0, i32 0
  %26 = load %struct.TYPE_2__*, %struct.TYPE_2__** %25, align 8
  %27 = icmp ne %struct.TYPE_2__* %26, null
  br i1 %27, label %28, label %42

28:                                               ; preds = %21
  %29 = load %struct.dn_ifaddr*, %struct.dn_ifaddr** %7, align 8
  %30 = getelementptr inbounds %struct.dn_ifaddr, %struct.dn_ifaddr* %29, i32 0, i32 0
  %31 = load %struct.TYPE_2__*, %struct.TYPE_2__** %30, align 8
  %32 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %31, i32 0, i32 1
  %33 = load i32*, i32** %32, align 8
  %34 = icmp eq i32* %33, null
  br i1 %34, label %35, label %42

35:                                               ; preds = %28
  %36 = load %struct.dn_ifaddr*, %struct.dn_ifaddr** %7, align 8
  %37 = getelementptr inbounds %struct.dn_ifaddr, %struct.dn_ifaddr* %36, i32 0, i32 0
  %38 = load %struct.TYPE_2__*, %struct.TYPE_2__** %37, align 8
  %39 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %38, i32 0, i32 0
  %40 = load i32, i32* %39, align 8
  %41 = call i32 @dn_fib_disable_addr(i32 %40, i32 1)
  br label %44

42:                                               ; preds = %28, %21
  %43 = call i32 @dn_rt_cache_flush(i32 -1)
  br label %44

44:                                               ; preds = %42, %35
  br label %45

45:                                               ; preds = %3, %44, %11
  %46 = load i32, i32* @NOTIFY_DONE, align 4
  ret i32 %46
}

declare dso_local i32 @dn_fib_add_ifaddr(%struct.dn_ifaddr*) #1

declare dso_local i32 @dn_fib_sync_up(i32) #1

declare dso_local i32 @dn_rt_cache_flush(i32) #1

declare dso_local i32 @dn_fib_del_ifaddr(%struct.dn_ifaddr*) #1

declare dso_local i32 @dn_fib_disable_addr(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
